fix(theme): sheet-79 cta button alignment fix for webforms

--- a/web/themes/custom/ellison/components/00-base/tailwind/_tailwind.scss
+++ b/web/themes/custom/ellison/components/00-base/tailwind/_tailwind.scss
@@ -2953,6 +2953,9 @@ div.webform {
       width: 100%;
     }
   }
+  .cta-button__webform {
+    width: 100%;
+  }
   .cta-button__body {
     width: 100%;
   }
