--- a/web/themes/custom/ellison/components/02-molecules/cta/cta.css
+++ b/web/themes/custom/ellison/components/02-molecules/cta/cta.css
@@ -8,6 +8,10 @@
     }
   }
 
+  .cta-button__webform {
+    @apply w-full;
+  }
+
   .cta-button__body {
     @apply w-full;
   }
